[package]
name = "factorio-calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.9.3"
serialport = "4.3.0"
uom = {version = "0.36.0",default-features = false,features = ["autoconvert", "serde", "u32"]}
